--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3 class="direitos">Todos Direitos Reservados</h3>
         <pre class="rodapedados">Dayane Martorelli
 Oliveira do Hospital, Coimbra - 3405-508</pre>
-        <h2 class="desenvolvedor">Site Desenvolvido por <br><span><a  class="abra" href="https://www.instagram.com/erick_martorelli/">Ericksonk Martorelli</a></span></h2>
+        <h2 class="desenvolvedor">Site Desenvolvido por <br><span><a  class="abra" href="https://www.instagram.com/erick_martorelli/">Erickson Martorelli</a></span></h2>
         
     </footer>
 </body>
